--- a/package.json
+++ b/package.json
@@ -3,11 +3,30 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.7.2",
+    "@fortawesome/fontawesome-svg-core": "^6.7.2",
+    "@fortawesome/free-brands-svg-icons": "^6.7.2",
+    "@fortawesome/free-solid-svg-icons": "^6.7.2",
+    "@fortawesome/react-fontawesome": "^0.2.2",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.7.9",
+    "bootstrap": "^5.3.3",
+    "flowbite-react": "^0.10.2",
+    "framer-motion": "^11.15.0",
+    "leaflet": "^1.9.4",
+    "lg-thumbnail": "^1.2.1",
+    "lg-zoom": "^1.3.0",
+    "lightgallery": "^2.8.2",
+    "motion": "^11.15.0",
     "react": "^19.0.0",
+    "react-axios": "^2.0.6",
+    "react-bootstrap": "^2.10.7",
     "react-dom": "^19.0.0",
+    "react-leaflet": "^5.0.0",
+    "react-lightgallery": "^0.9.0",
+    "react-router-dom": "^7.1.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
@@ -34,5 +53,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "ajv": "^7.2.4"
   }
 }
